--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,31 @@ a:-webkit-any-link{
     color: #D3573C;
     font-size: 36px;
     text-decoration: none;
+    display: flex ;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.photographer__infos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 1.4;
+}
+
+.photographer__infos__tagline{
+    font-size: smaller;
+    font-weight: bold;
+}
+
+.photographer__infos__price{
+    color: darkgrey;
+    font-size: smaller;
 }
 
 .photographer__cover {
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
     border-radius: 50%;
     overflow: hidden;
     margin-left: auto;
@@ -65,8 +85,8 @@ a:-webkit-any-link{
 }
 
 .photographer_section article img{
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
     object-fit: cover;
     
 }
