--- a/css/photographer.css
+++ b/css/photographer.css
@@ -66,6 +66,13 @@
     
 }
 
+.media__cover{
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+    overflow: hidden;
+}
+
 .contact_button {
     font-size: 20px;
     font-weight: bold;
