--- a/Public/css/photographer.css
+++ b/Public/css/photographer.css
@@ -32,6 +32,9 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    margin-left: 75px;
+    margin-bottom: 100px;
+
 }
 .photographer__infos{
     display: flex;
@@ -39,20 +42,25 @@ body{
     align-items: center;
     line-height: 1.6;
     margin-right: 150px;
+
 }
 
 .photographer_header article h3 {
     color: #D3573C;
-    font-size: 50px;
+    font-size: 130px;
+    margin-top: 110px; 
+    margin-bottom: 10px ;
 }
 
 .photographer__infos__local{
-    color: #D3573C;
+    color: #901C1C;
     text-align: center;
+    font-size:80px;
 }
 .photographer__infos__tagline{
     font-size: smaller;
-    font-weight: bold;
+    color: lightslategray;
+    font-size: 80px;
 }
 
 .photographer__cover {
