--- a/Public/css/photographer.css
+++ b/Public/css/photographer.css
@@ -265,19 +265,47 @@ form input {
     height: 130px;
     position: fixed;
     bottom: 0%;
-    width: 500px;
+    width: 679px;
     right: 3%;
     color: #312e2e;
-    font-size: 80px;
+    font-size: 61px;
     background-color: #db8876;
     opacity: 1;
     font-weight: bold;
     border-top-left-radius: 30px;
-    border-top-right-radius: 30px
+    border-top-right-radius: 30px;
     }
 
 .total_likes img{
     height: 80px;
     width: 80px;
-    margin-left: -50px;
+    margin-left: -110px;
+}
+
+.filter_portfolio{
+    font-size: 29px;
+    font-weight: bold;
+    color: white;
+    padding: 11px;
+    width: 250px;
+    height: 100px;
+    border: none;
+    background-color: #901C1C;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 35px;
+}
+
+.filter{
+    display: flex;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 110px;
+    margin-bottom: 25px;
+}
+
+.select_label{
+    font-size: 2em;
+    font-weight: bold;
 }
