--- a/Public/css/photographer.css
+++ b/Public/css/photographer.css
@@ -1,15 +1,18 @@
-body{
+body {
     margin-left: 5%;
-    margin-right: 5%;;
+    margin-right: 5%;
+    ;
 }
+
 #contact_modal {
     display: none;
 }
 
 
-header{
+header {
     margin-top: 75px;
 }
+
 .logo {
     height: 100px;
     margin-left: 100px;
@@ -23,9 +26,66 @@ header{
     flex-direction: row;
     margin-bottom: 25px;
     min-width: none;
+    width :133%;
 }
 
-.photographer{
+@media (max-width: 1200px) {
+    .photographer_header {
+        background-color: #FAFAFA;
+        height: auto;
+        margin: 0 100px;
+        margin-top: 0px;
+        width: 125%;
+        margin-right: 100px;
+        margin-bottom: 25px;
+        margin-left: 100px;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 25px;
+    }
+    .photographer_header article h3 {
+        color: #D3573C;
+        font-size: 50px;
+        margin-top: 110px;
+        margin-bottom: 10px;
+    }
+
+    .photographer__infos__local {
+        color: #901C1C;
+        font-size: 35px;
+    }
+
+    .photographer__infos__tagline {
+        font-size: smaller;
+        color: lightslategray;
+        font-size: 20px;
+    }
+
+    .contact_button {
+        font-size: 29px;
+        font-weight: bold;
+        color: white;
+        padding: 11px;
+        width: 250px;
+        height: 100px;
+        border: none;
+        background-color: #901C1C;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-right: 0;
+        margin-left: -232px;
+    }
+    .photographer__cover {
+        height: 270px;
+        width: 278px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+.photographer {
     margin-top: 25px;
     margin-left: 25px;
 }
@@ -40,7 +100,8 @@ header{
     margin-bottom: 100px;
 
 }
-.photographer__infos{
+
+.photographer__infos {
     display: flex;
     flex-direction: column;
     line-height: 1.6;
@@ -52,15 +113,16 @@ header{
 .photographer_header article h3 {
     color: #D3573C;
     font-size: 115px;
-    margin-top: 110px; 
-    margin-bottom: 10px ;
+    margin-top: 110px;
+    margin-bottom: 10px;
 }
 
-.photographer__infos__local{
+.photographer__infos__local {
     color: #901C1C;
-    font-size:55px;
+    font-size: 55px;
 }
-.photographer__infos__tagline{
+
+.photographer__infos__tagline {
     font-size: smaller;
     color: lightslategray;
     font-size: 27px;
@@ -75,25 +137,27 @@ header{
     margin-right: auto;
 }
 
-.photographer_header article img{
+.photographer_header article img {
     height: 400px;
     width: 400px;
     object-fit: cover;
-    
-}
-.media{
-    height: 500px;
-    width: 550px ;
+
 }
 
-.media__cover{
+.media {
+    height: 500px;
+    width: 550px;
+}
+
+.media__cover {
     height: 100%;
     width: 100%;
     overflow: hidden;
     border-radius: 1%;
 }
 
-.medias_section{
+.medias_section {
+
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 0px;
@@ -101,19 +165,43 @@ header{
     margin-right: 5%;
     margin-left: 5%;
 }
-.medias_section article img{
+
+@media (max-width: 1200px) {
+    .medias_section {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 137px;
+        grid-row-gap: 73px;
+        margin-right: 0%;
+        margin-left: 13%;
+    }
+}
+
+@media (max-width:768px) {
+    .medias_section {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 137px;
+        grid-row-gap: 73px;
+        margin-right: 0%;
+        margin-left: 13%;
+    }
+}
+
+.medias_section article img {
     height: 100%;
     width: 100%;
     object-fit: cover;
     object-fit: cover;
 }
 
-.medias_section article video{
+.medias_section article video {
     height: 600px;
     width: 700px;
     object-fit: cover;
 }
 
+@media (min-width: 1201px){
 .contact_button {
     font-size: 29px;
     font-weight: bold;
@@ -126,10 +214,9 @@ header{
     border-radius: 5px;
     cursor: pointer;
     margin-right: 150px;
-    margin-left:145px;
-}
-
-.title_likes{
+    margin-left: 145px;
+}}
+.title_likes {
     display: flex;
     flex-direction: row;
     align-content: center;
@@ -137,28 +224,32 @@ header{
     justify-content: space-between;
 }
 
-.likes{
+.likes {
     font-size: 25px;
-    margin-right:15px;
-}
-.likes_heart{
-    align-items: flex-end;
-    
+    margin-right: 15px;
 }
 
-.likes_heart :nth-child(1n){
+.likes_heart {
+    align-items: flex-end;
+
+}
+
+.likes_heart :nth-child(1n) {
     height: 30px;
-    width:30px;
+    width: 30px;
     color: #901C1C;
     margin-bottom: -6px;
     background: none;
-    border:none;
+    border: none;
     margin-left: 10px;
 }
 
-.contact_modal{
+.contact_modal {
     position: fixed;
-    top: 0; bottom: 0; left: 0; right: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .modal {
@@ -194,7 +285,7 @@ header{
     cursor: pointer;
     position: absolute;
     top: 3%;
-    right : 5%;
+    right: 5%;
 
 
 }
@@ -205,7 +296,7 @@ header{
     font-weight: 600;
 }
 
-.photographer_name{
+.photographer_name {
     font-size: 64px;
     font-weight: normal;
     text-align: center;
@@ -239,7 +330,7 @@ form input {
     border-radius: 5px;
 }
 
-.send_button{
+.send_button {
     font-size: 29px;
     font-weight: bold;
     color: white;
@@ -254,35 +345,35 @@ form input {
     margin-left: 0;
 }
 
-.msg{
+.msg {
     height: 220px;
 }
 
-.total_likes{
+.total_likes {
     display: none;
     justify-content: space-around;
     align-items: center;
-    height: 130px;
+    height: 110px;
     position: fixed;
     bottom: 0%;
-    width: 679px;
+    width: 650px;
     right: 3%;
     color: #312e2e;
-    font-size: 61px;
+    font-size: 40px;
     background-color: #db8876;
     opacity: 1;
     font-weight: bold;
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
-    }
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
 
-.total_likes img{
+.total_likes img {
     height: 80px;
     width: 80px;
     margin-left: -110px;
 }
 
-.filter_portfolio{
+.filter_portfolio {
     font-size: 29px;
     font-weight: bold;
     color: white;
@@ -296,7 +387,7 @@ form input {
     margin-left: 35px;
 }
 
-.filter{
+.filter {
     display: flex;
     display: flex;
     justify-content: flex-start;
@@ -305,7 +396,7 @@ form input {
     margin-bottom: 25px;
 }
 
-.select_label{
+.select_label {
     font-size: 2em;
     font-weight: bold;
 }
