--- a/Public/css/photographer.css
+++ b/Public/css/photographer.css
@@ -1,6 +1,6 @@
 body {
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 2%;
+    margin-right: 2%;
     ;
 }
 
@@ -105,8 +105,8 @@ header {
     display: flex;
     flex-direction: column;
     line-height: 1.6;
-    margin-right: 164px;
-    width: 55%;
+    margin-right: 50px;
+    width: 40%;
 
 }
 
@@ -130,7 +130,7 @@ header {
 
 .photographer__cover {
     height: 400px;
-    width: 600px;
+    width: 450px;
     border-radius: 50%;
     overflow: hidden;
     margin-left: auto;
@@ -139,7 +139,7 @@ header {
 
 .photographer_header article img {
     height: 400px;
-    width: 400px;
+    width: 450px;
     object-fit: cover;
 
 }
@@ -160,10 +160,10 @@ header {
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 160px;
+    grid-column-gap: 100px;
     grid-row-gap: 81px;
     margin-right: 5%;
-    margin-left: 10%;
+    margin-left: 5%;
 }
 
 @media (max-width: 1200px) {
@@ -213,8 +213,8 @@ header {
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
-    margin-right: 408px;
-    margin-left: 300px;
+    margin-right: 200px;
+    margin-left: 100px;
 }}
 .title_likes {
     display: flex;
@@ -346,7 +346,10 @@ form input {
 }
 
 .saisie_msg {
+    width: 100%;
     height: 220px;
+    border: none;
+    border-radius: 5px;
 }
 
 .total_likes {
