--- a/Public/css/photographer.css
+++ b/Public/css/photographer.css
@@ -18,6 +18,9 @@ header {
     margin-left: 100px;
 }
 
+.photographer_container{
+    width: 100%;
+}
 .photographer_header {
     background-color: #FAFAFA;
     height: auto;
@@ -26,7 +29,8 @@ header {
     flex-direction: row;
     margin-bottom: 25px;
     min-width: none;
-    width :133%;
+    box-sizing: border-box;
+    width :100%;
 }
 
 @media (max-width: 1200px) {
@@ -72,8 +76,8 @@ header {
         background-color: #901C1C;
         border-radius: 5px;
         cursor: pointer;
-        margin-right: 0;
-        margin-left: -232px;
+        margin-right: 5%;
+        margin-left: 1%;
     }
     .photographer__cover {
         height: 270px;
@@ -82,6 +86,12 @@ header {
         overflow: hidden;
         margin-left: auto;
         margin-right: auto;
+    }
+    .photographer_header article img {
+        aspect-ratio: 1 / 1;
+        width: 100%;
+        object-fit: cover;
+    
     }
 }
 
@@ -93,7 +103,7 @@ header {
 .photographer_header article {
     justify-self: center;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row;
     margin-left: 75px;
@@ -106,31 +116,31 @@ header {
     flex-direction: column;
     line-height: 1.6;
     margin-right: 50px;
-    width: 40%;
+    width: 25%;
 
 }
 
 .photographer_header article h3 {
     color: #D3573C;
-    font-size: 115px;
+    font-size: 5em;
     margin-top: 110px;
     margin-bottom: 10px;
 }
 
 .photographer__infos__local {
     color: #901C1C;
-    font-size: 55px;
+    font-size: 2.5em;
 }
 
 .photographer__infos__tagline {
     font-size: smaller;
     color: lightslategray;
-    font-size: 27px;
+    font-size: 1.5em;
 }
 
 .photographer__cover {
-    height: 400px;
-    width: 450px;
+    max-height: 400px;
+    max-width: 450px;
     border-radius: 50%;
     overflow: hidden;
     margin-left: auto;
@@ -138,38 +148,40 @@ header {
 }
 
 .photographer_header article img {
-    height: 400px;
-    width: 450px;
+    aspect-ratio: 1 / 1;
+    width: 100%;
     object-fit: cover;
 
 }
 
-.media {
-    height: 700px;
-    width: 700px;;
-}
+ /* .media {
+    height: 500px;
+    width: 100%;
+    
+} */
 
 .media__cover {
-    height: 100%;
+    
+    aspect-ratio: 1 / 1;
     width: 100%;
-    overflow: hidden;
-    border-radius: 1%;
+    max-width: 700px;
+    max-height: 700px;
 }
 
 .medias_section {
 
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 100px;
-    grid-row-gap: 81px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto ;
+    grid-gap: 5vh;
     margin-right: 5%;
     margin-left: 5%;
 }
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
     .medias_section {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 1fr 1fr 1fr
         grid-column-gap: 137px;
         grid-row-gap: 73px;
         margin-right: 0%;
@@ -186,35 +198,42 @@ header {
         margin-right: 0%;
         margin-left: 13%;
     }
-}
+} */
 
 .medias_section article img {
-    height: 100%;
+    aspect-ratio: 1 / 1;
+    height: auto;
     width: 100%;
-    object-fit: cover;
+    max-width: 700px;
+    max-height: 700px;
+    
     object-fit: cover;
 }
 
 .medias_section article video {
-    height: 700px;
-    width: 700px;
+    aspect-ratio: 1 / 1;
+    height: auto;
+    width: 100%;
+    max-width: 700px;
+    max-height: 700px;
     object-fit: cover;
 }
 
 @media (min-width: 1201px){
+
 .contact_button {
     font-size: 29px;
     font-weight: bold;
     color: white;
     padding: 11px;
-    width: 430px;
+    width:15%;
     height: 100px;
     border: none;
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
-    margin-right: 200px;
-    margin-left: 100px;
+    margin-left: 15%;
+    
 }}
 .title_likes {
     display: flex;
@@ -359,10 +378,10 @@ form input {
     height: 110px;
     position: fixed;
     bottom: 0%;
-    width: 650px;
-    right: 3%;
+    width: 22%;
+    right: 5%;
     color: #312e2e;
-    font-size: 40px;
+    font-size: 2.5em;
     background-color: #db8876;
     opacity: 1;
     font-weight: bold;
